--- a/{{cookiecutter.dir_name}}/dev_notebooks/index.ipynb
+++ b/{{cookiecutter.dir_name}}/dev_notebooks/index.ipynb
@@ -7,16 +7,16 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from {{cookiecutter.dir_name}}.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# {{cookiecutter.dir_name}}\n",
     "\n",
-    "> Summary description here."
+    "> {{cookiecutter.description}}"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "`pip install {{cookiecutter.dir_name}}`"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "Examples"
    ]
   },
   {
