--- a/{{cookiecutter.dir_name}}/notebooks/TEMPLATE.ipynb
+++ b/{{cookiecutter.dir_name}}/notebooks/TEMPLATE.ipynb
@@ -6,16 +6,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp core"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# module name here\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
     "\n",
-    "> API details."
+    "from htools import *"
    ]
   },
   {
@@ -23,17 +30,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#hide\n",
-    "from nbdev.showdoc import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": ["cd_root()"]
   }
  ],
  "metadata": {
